[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/icons/icon_128_delete_trashcan.svg" type="Texture" id=1]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=3]
[ext_resource path="res://components/node_info/node_info_element_tag_edit.gd" type="Script" id=5]
[ext_resource path="res://assets/icons/icon_128_search.svg" type="Texture" id=6]

[node name="TagElement" type="PanelContainer"]
margin_right = 356.0
margin_bottom = 45.0
theme = ExtResource( 3 )
theme_type_variation = "PanelContainerTagElement"
script = ExtResource( 5 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_top = 4.0
margin_right = 356.0
margin_bottom = 41.0
custom_constants/separation = -5

[node name="Var" type="HBoxContainer" parent="VBox"]
margin_right = 356.0
margin_bottom = 22.0

[node name="TagVariable" type="Label" parent="VBox/Var"]
margin_right = 308.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_type_variation = "LabelCode"
text = "variable"
autowrap = true

[node name="SearchTag" parent="VBox/Var" instance=ExtResource( 2 )]
margin_left = 312.0
margin_right = 332.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "Search for this Tag"
size_flags_vertical = 0
icon_tex = ExtResource( 6 )
icon_margin = 1

[node name="DeleteTag" parent="VBox/Var" instance=ExtResource( 2 )]
margin_left = 336.0
margin_right = 356.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "Delete this Tag"
size_flags_vertical = 0
icon_tex = ExtResource( 1 )
icon_margin = 1

[node name="Val" type="HBoxContainer" parent="VBox"]
margin_top = 17.0
margin_right = 356.0
margin_bottom = 37.0
custom_constants/separation = 0

[node name="EqualLabel" type="Label" parent="VBox/Val"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_right = 9.0
margin_bottom = 20.0
size_flags_vertical = 0
theme_type_variation = "LabelCode"
text = ":"
valign = 2

[node name="TagValue" type="LineEdit" parent="VBox/Val"]
margin_left = 9.0
margin_right = 356.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
theme_type_variation = "TextEditTag"
text = "test"
max_length = 255

[connection signal="pressed" from="VBox/Var/SearchTag" to="." method="_on_SearchTag_pressed"]
[connection signal="pressed" from="VBox/Var/DeleteTag" to="." method="_on_DeleteTag_pressed"]
[connection signal="focus_exited" from="VBox/Val/TagValue" to="." method="_on_TagValue_focus_exited"]
[connection signal="text_entered" from="VBox/Val/TagValue" to="." method="_on_TagValue_text_entered"]
